---------------------------------------------------------------------------------------------------
Version: 1.1.11
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 2021-12-17
  Changes:
    - Added wood as a limited resource, as some mods need it to start
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2021-08-30
  Bugfixes:
    - Make the mod add missing resources when they were changed
    - Replace belts when upgrading Factorissimo versions
    - Remove a loop that existed for no reason and broke the mod
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021-08-29
  Bugfixes:
    - Fixed belt inputs not getting upgraded
    - Fixed allowing to get infinite pipes and belts
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-05-23
  Bugfixes:
    - Fixed a crash when ores have multiple icons [authored by birdbrainswagtrain on 9870fd4]
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-05-16
  Bugfixes:
    - Removed Peaceful mode in the map preset to allow achievements (no impact)
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-05-16
  Changes:
    - Added a map generation preset for the mod so biters have no chance of existence
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-04-09
  Bugfixes:
    - Fixed a bug with concatenation to localized names
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2021-04-08
  Bugfixes: