@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.11
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed incorrect localized name concatenation in technology prototypes
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.10
 Date: 2021-12-17
